chore: update drip clients
