# drip-ts/models/ExpandedAdminPosition.ts
@@ -1,0 +1,183 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Drip Backend
+ * Drip backend service. All API\'s have a IP rate limit of 10 requests per second. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: mocha@dcaf.so
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import {
+    ExpandedAdminPositionAllOf,
+    ExpandedAdminPositionAllOfFromJSON,
+    ExpandedAdminPositionAllOfFromJSONTyped,
+    ExpandedAdminPositionAllOfToJSON,
+} from './ExpandedAdminPositionAllOf';
+import {
+    Position,
+    PositionFromJSON,
+    PositionFromJSONTyped,
+    PositionToJSON,
+} from './Position';
+import {
+    ProtoConfig,
+    ProtoConfigFromJSON,
+    ProtoConfigFromJSONTyped,
+    ProtoConfigToJSON,
+} from './ProtoConfig';
+import {
+    Token,
+    TokenFromJSON,
+    TokenFromJSONTyped,
+    TokenToJSON,
+} from './Token';
+import {
+    Vault,
+    VaultFromJSON,
+    VaultFromJSONTyped,
+    VaultToJSON,
+} from './Vault';
+
+/**
+ * Get Position with Expanded Data
+ * @export
+ * @interface ExpandedAdminPosition
+ */
+export interface ExpandedAdminPosition {
+    /**
+     * 
+     * @type {string}
+     * @memberof ExpandedAdminPosition
+     */
+    pubkey: string;
+    /**
+     * 
+     * @type {Vault}
+     * @memberof ExpandedAdminPosition
+     */
+    vault: Vault;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExpandedAdminPosition
+     */
+    authority: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExpandedAdminPosition
+     */
+    depositedTokenAAmount: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExpandedAdminPosition
+     */
+    withdrawnTokenBAmount: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExpandedAdminPosition
+     */
+    depositTimestamp: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExpandedAdminPosition
+     */
+    dcaPeriodIdBeforeDeposit: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExpandedAdminPosition
+     */
+    numberOfSwaps: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExpandedAdminPosition
+     */
+    periodicDripAmount: string;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof ExpandedAdminPosition
+     */
+    isClosed: boolean;
+    /**
+     * 
+     * @type {ProtoConfig}
+     * @memberof ExpandedAdminPosition
+     */
+    protoConfig?: ProtoConfig;
+    /**
+     * 
+     * @type {Token}
+     * @memberof ExpandedAdminPosition
+     */
+    tokenA?: Token;
+    /**
+     * 
+     * @type {Token}
+     * @memberof ExpandedAdminPosition
+     */
+    tokenB?: Token;
+}
+
+export function ExpandedAdminPositionFromJSON(json: any): ExpandedAdminPosition {
+    return ExpandedAdminPositionFromJSONTyped(json, false);
+}
+
+export function ExpandedAdminPositionFromJSONTyped(json: any, ignoreDiscriminator: boolean): ExpandedAdminPosition {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'pubkey': json['pubkey'],
+        'vault': VaultFromJSON(json['vault']),
+        'authority': json['authority'],
+        'depositedTokenAAmount': json['depositedTokenAAmount'],
+        'withdrawnTokenBAmount': json['withdrawnTokenBAmount'],
+        'depositTimestamp': json['depositTimestamp'],
+        'dcaPeriodIdBeforeDeposit': json['dcaPeriodIdBeforeDeposit'],
+        'numberOfSwaps': json['numberOfSwaps'],
+        'periodicDripAmount': json['periodicDripAmount'],
+        'isClosed': json['isClosed'],
+        'protoConfig': !exists(json, 'protoConfig') ? undefined : ProtoConfigFromJSON(json['protoConfig']),
+        'tokenA': !exists(json, 'tokenA') ? undefined : TokenFromJSON(json['tokenA']),
+        'tokenB': !exists(json, 'tokenB') ? undefined : TokenFromJSON(json['tokenB']),
+    };
+}
+
+export function ExpandedAdminPositionToJSON(value?: ExpandedAdminPosition | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'pubkey': value.pubkey,
+        'vault': VaultToJSON(value.vault),
+        'authority': value.authority,
+        'depositedTokenAAmount': value.depositedTokenAAmount,
+        'withdrawnTokenBAmount': value.withdrawnTokenBAmount,
+        'depositTimestamp': value.depositTimestamp,
+        'dcaPeriodIdBeforeDeposit': value.dcaPeriodIdBeforeDeposit,
+        'numberOfSwaps': value.numberOfSwaps,
+        'periodicDripAmount': value.periodicDripAmount,
+        'isClosed': value.isClosed,
+        'protoConfig': ProtoConfigToJSON(value.protoConfig),
+        'tokenA': TokenToJSON(value.tokenA),
+        'tokenB': TokenToJSON(value.tokenB),
+    };
+}
+
