# drip-ts/models/ExpandedAdminPositionAllOf.ts
@@ -1,0 +1,99 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Drip Backend
+ * Drip backend service. All API\'s have a IP rate limit of 10 requests per second. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: mocha@dcaf.so
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import {
+    ProtoConfig,
+    ProtoConfigFromJSON,
+    ProtoConfigFromJSONTyped,
+    ProtoConfigToJSON,
+} from './ProtoConfig';
+import {
+    Token,
+    TokenFromJSON,
+    TokenFromJSONTyped,
+    TokenToJSON,
+} from './Token';
+import {
+    Vault,
+    VaultFromJSON,
+    VaultFromJSONTyped,
+    VaultToJSON,
+} from './Vault';
+
+/**
+ * 
+ * @export
+ * @interface ExpandedAdminPositionAllOf
+ */
+export interface ExpandedAdminPositionAllOf {
+    /**
+     * 
+     * @type {Vault}
+     * @memberof ExpandedAdminPositionAllOf
+     */
+    vault?: Vault;
+    /**
+     * 
+     * @type {ProtoConfig}
+     * @memberof ExpandedAdminPositionAllOf
+     */
+    protoConfig?: ProtoConfig;
+    /**
+     * 
+     * @type {Token}
+     * @memberof ExpandedAdminPositionAllOf
+     */
+    tokenA?: Token;
+    /**
+     * 
+     * @type {Token}
+     * @memberof ExpandedAdminPositionAllOf
+     */
+    tokenB?: Token;
+}
+
+export function ExpandedAdminPositionAllOfFromJSON(json: any): ExpandedAdminPositionAllOf {
+    return ExpandedAdminPositionAllOfFromJSONTyped(json, false);
+}
+
+export function ExpandedAdminPositionAllOfFromJSONTyped(json: any, ignoreDiscriminator: boolean): ExpandedAdminPositionAllOf {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'vault': !exists(json, 'vault') ? undefined : VaultFromJSON(json['vault']),
+        'protoConfig': !exists(json, 'protoConfig') ? undefined : ProtoConfigFromJSON(json['protoConfig']),
+        'tokenA': !exists(json, 'tokenA') ? undefined : TokenFromJSON(json['tokenA']),
+        'tokenB': !exists(json, 'tokenB') ? undefined : TokenFromJSON(json['tokenB']),
+    };
+}
+
+export function ExpandedAdminPositionAllOfToJSON(value?: ExpandedAdminPositionAllOf | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'vault': VaultToJSON(value.vault),
+        'protoConfig': ProtoConfigToJSON(value.protoConfig),
+        'tokenA': TokenToJSON(value.tokenA),
+        'tokenB': TokenToJSON(value.tokenB),
+    };
+}
+
