# drip-ts/models/index.ts
@@ -3,6 +3,8 @@
 export * from './ActiveWallet';
 export * from './DripCommon';
 export * from './ErrorResponse';
+export * from './ExpandedAdminPosition';
+export * from './ExpandedAdminPositionAllOf';
 export * from './ExpandedAdminVault';
 export * from './ExpandedAdminVaultAllOf';
 export * from './MintRequest';
